--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <h1>Qin Fang </h1>
 </div>
 <table class="imgtable"><tr><td>
-<a href="https://fangqin-hit.github.io/"><img src="photos/bio.jpg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
+<a href="https://fangqin-hit.github.io/"><img src="bio.jpg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
 <td align="left"><p><b>Assistant Professor, </b> <br />
 <b>Harbin Institute of Technology</b> <br />
 <b>School of Information Science and Engineering</b> <br />
