--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <b>E-mail:</b> <a href="mailto:zhouxiuze@foxmail.com">fangqin@hit.edu.cn</a></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>Fang Qin joined the School of Control Science and Engineering of Zhejiang University in 2021 to pursue her PhD under the supervision of Researcher Lu Haojian (Overseas Youqing), and her co-supervisor is Professor Gong Zhefeng. Previously, she studied for a master's degree at the School of Aeronautics and Astronautics of Zhejiang University from 2018 to 2021, where she studied origami-inspired soft robots. Her peer-reviewed papers have been published in international journals including IEEE Transactions on Mechatronics, Research, Advanced Intelligent Systems, Sensors and Actuators A: Physical, and et al.</p>
+<p>Fang Qin joined the School of Control Science and Engineering at Zhejiang University in 2021 to pursue her Ph.D. under the supervision of Researcher Lu Haojian (Overseas High-Level Talent) and co-supervision of Professor Gong Zhefeng. From 2018 to 2021, she completed her master's degree at the School of Aeronautics and Astronautics, Zhejiang University, where her research focused on origami-inspired soft robotics. Her peer-reviewed work has been published in leading international journals such as IEEE Transactions on Mechatronics, Research, Advanced Intelligent Systems, Sensors and Actuators A: Physical, among others. She has received several honors, including the Zhejiang University Interdisciplinary Research Achievement Award and the Wiley China Excellent Author Prize.</p>
 <h2>Research</h2>
 <h3>Research interests</h3>
 <ul>
