--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </li>
 <li><p>Jiaxu Shen*, Qin Fang*, et al. "Piezoelectric Planar Parallel Microrobot with High Bandwidth and Precision for Micromanipulation", IEEE Transactions on Automation Science and Engineering, 2024 (JCR Q1)</p>
 </li>
-<li><p>Jingyu Zhang%, Qin Fang*, et al. "Design, Modeling and Force Control of A Variable-Length Continuum Robot with Variable Stiffness for Minimally Invasive Surgery", IEEE Transactions on Automation Science and Engineering, 2024 (JCR Q1)</p>
+<li><p>Jingyu Zhang*, Qin Fang*, et al. "Design, Modeling and Force Control of A Variable-Length Continuum Robot with Variable Stiffness for Minimally Invasive Surgery", IEEE Transactions on Automation Science and Engineering, 2024 (JCR Q1)</p>
 </li>
 </ol>
 <p><b>Note</b>: * indicates the co-first author.</p>
